<resources>
    <string name="app_name">Angeluz</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Farmacia Angeluz</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="op_mis_productos">Mis productos</string>
    <string name="op_mis_pedidos">Mis Pedidos</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_Operaciones">Operaciones</string>
    <string name="menu_Producto">Productos</string>
    <string name="menu_venta">Venta</string>
    <string name="menu_compra">Compra</string>
    <string name="menu_catalogo">Catalogo</string>


    <string name="app_far">Farmacia</string>
    <string name="txtBienvenido">Bienvenido</string>
    <string name="txtfar">Farmacia Angeluz</string>
    <string name="txtUsuario">Usuario</string>
    <string name="txtcontraseña">contraseña</string>
    <string name="editusuario">usuario</string>
    <string name="editcontraseña">contraseña</string>
    <string name="btnIniciar">Iniciar</string>
    <string name="imgIlusr">Ilustracion</string>


    <string name="app_for">Agregar Cliente</string>
    <string name="txtnombre">Nombres</string>
    <string name="txtapellido1">Apellido Paterno</string>
    <string name="txtapellido2">Apellido Materno</string>
    <string name="txttelefono">Telefono</string>"
    <string name="txtDireccion">Dirección</string>
    <string name="editnombre">Text</string>"
    <string name="editapellido1">Apellido Paterno</string>
    <string name="editapellido2">Apellido Materno</string>
    <string name="edittelefono">Teléfono</string>

    <string name="editDireccion">Dirección</string>
    <string name="btnGuardar">Guardar</string>
    <string name="Escribir_Nombre">Escribir nombres </string>
    <string name="Escribir_PrimerApellido">Escribir apellido1 </string>
    <string name="Escribir_SegundoApellido">Escribir apellido2</string>
    <string name="ingresar_direccion">Escribir dirección </string>
    <string name="ingresar_telefono">Escribir teléfono </string>


    <!-- PROVEEDORES -->
    <string name="app_proveedores">Agregar Proveedores</string>
    <string name="txtnombreProveedores">Nombres</string>
    <string name="txtprimerApellidoProveedor">Apellido Paterno</string>
    <string name="txtsegundoApellidoProveedor">Apellido Materno</string>
    <string name="txtemail">Correo</string>
    <string name="txtdireccion">Dirección</string>
    <string name="txtTelefono">Teléfono</string>

    <string name="editNombre_proveedor">Text</string>
    <string name="editapellido1_proveedor">Apellido Paterno</string>
    <string name="editapellido2_proveedor">Apellido Materno</string>
    <string name="editemail_proveedor">Email</string>
    <string name="editdireccion_proveedor">Dirección</string>
    <string name="edittelefono_proveedor">Teléfono</string>
    <string name="btnGuardar_proveedor">Guardar</string>

    <string name="Escribir_nombre_proveedor">Escribir Nombres</string>"
    <string name="Escribir_primerapellido_proveedor">Escribir apellido1</string>
    <string name="Escribir_segundoapellido_proveedor">Escribir apellido2</string>
    <string name="Escribir_email">Escribir email</string>
    <string name="Escribir_direccion">Escribir dirección</string>
    <string name="Escribir_telefono_proveedor">Escribir teléfono</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--    PRODUCTOS-->
    <string name="ver_detalles">Ver detalles</string>
    <string name="ocultar_detalles">Ocultar detalles</string>

    <string-array name="opciones_filtro">
        <item>Nombre</item>
        <item>Categoría</item>
        <item>Unidad</item>
        <item>Presentación</item>
    </string-array>


    <string name="lorem_ipsum">Lorem ipsum dolor sit amet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>